# wet1mivne

./: AVLTree.h  CMakeLists.txt  Player.h  Team.h  main.cpp  main23a1.cpp  worldcup23a1.cpp  worldcup23a1.h
